	* buildbot/process/buildstep.py:
	(BuildStep.setBuildSlave): accept that reference
	(BuildStep.runCommand): pass the reference on to the RemoteCommand
	(RemoteCommand.remote_update): update the timestamp
	(RemoteCommand.remote_complete): same
	* buildbot/test/runutils.py (StepTester.makeStep): match the change
	* buildbot/test/test_steps.py (BuildStep.testShellCommand1): same


	* buildbot/status/web/baseweb.py (OneLineMixin.make_line): tighten
	up the format a bit
	(OneLinePerBuild.body): use a <ul> instead of <div>s
	(OneLinePerBuildOneBuilder.body): same

	* contrib/darcs_buildbot.py (makeChange): handle moved files too,
	by adding the file's new name to the list of changed files. This
	ought to be sufficient for things like isFileImportant and trial
	tests that only exercise tests for files that have been modified.
	Closes #31.

	* buildbot/status/web/xmlrpc.py (XMLRPCServer): add preliminary
	XMLRPC server to the WebStatus page. This only has two methods
	right now (getAllBuildsInInterval and getBuild), but we'll be
	adding more in the future. This server is extracted from the
	trac-plugin branch.

	* buildbot/status/web/baseweb.py (OneLinePerBuild): refactor using
	generateFinishedBuilds, and improve the data displayed.
	* buildbot/status/web/build.py (StatusResourceBuild): rearrange
	the per-Build page, add some information like ETA and got_revision
	* buildbot/status/web/builder.py (StatusResourceBuilder): same,
	adding a list of recently completed builds
	* buildbot/status/web/base.py (css_classes): factor this out

	* buildbot/interfaces.py (IStatus.generateFinishedBuilds): define
	new method, to make status display classes easier to write,
	especially the WebStatus 'one_line_per_build' page.
	(IBuilderStatus.generateFinishedBuilds): same
	* buildbot/status/builder.py (BuilderStatus.generateFinishedBuilds):
	(Status.generateFinishedBuilds): implement it

	* buildbot/process/factory.py (GNUAutoconf.__init__): allow